--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
   });
 
   // MQTT (SECURE for GitHub Pages)
-  const client = mqtt.connect("wss://test.mosquitto.org:8081/mqtt");
+  //const client = mqtt.connect("wss://test.mosquitto.org:8081/mqtt");
+  const client = mqtt.connect("wss://broker.hivemq.com:8884/mqtt");
 
   client.on("connect", () => {
     console.log("✅ MQTT Connected");
@@ -108,3 +109,4 @@
 
 </body>
 </html>
+
